--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.3.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "swiper": "^10.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
