--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,15 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.0.0",
+    "firebase-admin": "^11.9.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1"
   },
-  "prettier": {"tabWidth": 4}
+  "prettier": {
+    "tabWidth": 4
+  }
 }
