--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.0.0",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
