--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "firebase": "^10.0.0",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
