--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-admin": "^11.9.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1"
   },
-  "prettier": {"tabWidth": 4}
+  "prettier": {
+    "tabWidth": 4
+  }
 }
