--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
+    "bootstrap-icons": "^1.10.5",
     "dotenv": "^16.3.1",
     "firebase": "^10.0.0",
     "rc-slider": "^10.2.1",
