--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.0.0",
     "firebase-admin": "^11.9.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
