--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.0.0",
     "firebase-admin": "^11.9.0",
     "fs": "^0.0.1-security",
+    "mercadopago": "^1.5.16",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
