--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "mercadopago": "^1.5.16",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
