--- a/server/src/.env
+++ b/server/src/.env
@@ -1,4 +1,9 @@
+# DB_USER=postgres
+# DB_PASSWORD=McMovdyFTCIvzEbhzz7L
+# DB_HOST=containers-us-west-145.railway.app:5764
+# PORT=3001
+
 DB_USER=postgres
-DB_PASSWORD=McMovdyFTCIvzEbhzz7L
-DB_HOST=containers-us-west-145.railway.app:5764
+DB_PASSWORD=6eEYZGrvmvD5ETOa4UXn
+DB_HOST=containers-us-west-142.railway.app:5808 
 PORT=3001
