--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js",
-    "start": "concurrently \"npm run server\" \"npm run api\"",
+    "server": "node ./index.js",  
+    "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "PROGRAMERSGURU_TEAM_SERVER",
