--- a/server/src/.env
+++ b/server/src/.env
@@ -1,11 +1,7 @@
-# DB_USER=postgres
-# DB_PASSWORD=McMovdyFTCIvzEbhzz7L
-# DB_HOST=containers-us-west-145.railway.app:5764
-# PORT=3001
 
 DB_USER=postgres
 DB_PASSWORD=6eEYZGrvmvD5ETOa4UXn
-DB_HOST=containers-us-west-142.railway.app:5808 
+DB_DEPLOY=postgresql://postgres:6eEYZGrvmvD5ETOa4UXn@containers-us-west-142.railway.app:5808/railway
 PORT=3001
 OUR_EMAIL = programersguru_team@gmail.com
 OUR_PASSWORD = eihmosgkmqnipihr
