--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "node ./index.js",  
+    "server": "nodemon ./index.js",  
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
