--- a/server/src/.env
+++ b/server/src/.env
@@ -5,4 +5,5 @@ DB_DEPLOY=postgresql://postgres:6eEYZGrvmvD5ETOa4UXn@containers-us-west-142.rail
 PORT=3001
 OUR_EMAIL = programersguru_team@gmail.com
 OUR_PASSWORD = eihmosgkmqnipihr
-URL_FEEDBACKS = "https://programersguru-team-jiysb68ix-jltambleygomez.vercel.app"
+# URL_FEEDBACKS = "https://programersguru-team-jiysb68ix-jltambleygomez.vercel.app"
+URL_FEEDBACKS = "http://localhost:5173"
